--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  /* background-color: black; */
 }
 html {
   font-family: sans-serif;
@@ -7,4 +8,5 @@ html {
 }
 body {
   margin: 0;
+  background-color: black;
 }
